# ml

./: .gitignore  .travis.yml  Cargo.toml  README.md  build.rs  rust-toolchain
.cargo/: config.toml
contrib/autogen/: README.md  gen_and_push_to_github.php  gen_diagrams.php  gen_diagrams_for_deps.php  gen_diagrams_remote.php  remote_crates.json
examples/: main.rs
src/: lib.rs  main.rs  prelude.rs
src/core/: mod.rs  segment.rs
src/core/item/: mod.rs  relation.rs
src/core/item/state/: implem.rs  method.rs  mod.rs
src/core/item/state/abstraction/: enumerate.rs  extend.rs  mod.rs  structure.rs
src/module/: mod.rs
tests/: aggregation.rs  association.rs  composition.rs  dependency.rs  realization.rs
